--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "paths": {
+      "@src/*": ["./src/*"],
+      "@core/*": ["./src/core/*"]
+    }
   },
   "exclude": [
     "node_modules",
