--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
+    "express-rate-limit": "^5.1.3",
     "passport": "^0.4.1",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
@@ -47,12 +49,14 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
+    "@nestjs/passport": "^7.1.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
